--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <br>
     <label for="result">부가세 포함 가격:</label>
     <input type="text" id="result" name="result" readonly>
+
+    <ins class="kakao_ad_area" style="display:none;"
+    data-ad-unit = "DAN-vldNKAeSnSl1ss6Z"
+    data-ad-width = "160"
+    data-ad-height = "600"></ins>
+
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <script src="javascript.js"></script>
   </body>
 </html>
